tests/paczka1/small_fuzzy/39895534.err
Error in line 7: Tz95 S42? 8?,5
Error in line 14: UZ6dUmr A29 55,4
